@@ -1,5 +1,6 @@
 package de.uka.ilkd.key.informationflow.po.snippet;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.EnumMap;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -12,7 +13,7 @@ import de.uka.ilkd.key.proof.init.ProofObligationVars;
 import de.uka.ilkd.key.speclang.BlockContract;
 import de.uka.ilkd.key.speclang.FunctionalOperationContract;
 import de.uka.ilkd.key.speclang.InformationFlowContract;
-import de.uka.ilkd.key.speclang.LoopInvariant;
+import de.uka.ilkd.key.speclang.LoopSpecification;
 
 /**
  *
@@ -52,7 +53,7 @@ class BasicPOSnippetFactoryImpl implements BasicPOSnippetFactory {
         registerFactoryMethods();
     }
     
-    BasicPOSnippetFactoryImpl(LoopInvariant invariant,
+    BasicPOSnippetFactoryImpl(LoopSpecification invariant,
                               ProofObligationVars poVars,
                               ExecutionContext context,
                               Term guardTerm,
@@ -85,13 +86,26 @@ class BasicPOSnippetFactoryImpl implements BasicPOSnippetFactory {
     private void registerFactoryMethods() {
         try {
             for (Snippet s : Snippet.values()) {
-                FactoryMethod fm = (FactoryMethod)s.c.newInstance();
+                FactoryMethod fm =
+                        (FactoryMethod)s.c.getDeclaredConstructor().newInstance();
                 factoryMethods.put(s, fm);
             }
         } catch (InstantiationException ex) {
             Logger.getLogger(BasicPOSnippetFactoryImpl.class.getName()).
                     log(Level.SEVERE, null, ex);
         } catch (IllegalAccessException ex) {
+            Logger.getLogger(BasicPOSnippetFactoryImpl.class.getName()).
+                    log(Level.SEVERE, null, ex);
+        } catch (IllegalArgumentException ex) {
+            Logger.getLogger(BasicPOSnippetFactoryImpl.class.getName()).
+                    log(Level.SEVERE, null, ex);
+        } catch (InvocationTargetException ex) {
+            Logger.getLogger(BasicPOSnippetFactoryImpl.class.getName()).
+                    log(Level.SEVERE, null, ex);
+        } catch (NoSuchMethodException ex) {
+            Logger.getLogger(BasicPOSnippetFactoryImpl.class.getName()).
+                    log(Level.SEVERE, null, ex);
+        } catch (SecurityException ex) {
             Logger.getLogger(BasicPOSnippetFactoryImpl.class.getName()).
                     log(Level.SEVERE, null, ex);
         }
